2011-10-30  kitone  <kitone@gna.org>

	* plugins/actions/videoplayermanagement/videoplayermanagement.cc:
	Add the ability to skip frame by frame. (Lilian request)

	* src/player.h:
	* src/vp/gstplayer.cc:
	* src/vp/gstplayer.h:
	Return framerate (fraction) in separate values.

2011-10-20  kitone  <kitone@gna.org>

	* plugins/actions/documentsnavigation/documentsnavigation.cc:
	Failed to compile.

2011-10-20  kitone  <kitone@gna.org>

	* plugins/actions/movesubtitles/dialog-move-subtitles.ui:
	* plugins/actions/textcorrection/assistant-text-correction.ui:
	* plugins/actions/textcorrection/patternspage.h:
	Fix untranslated text.

2011-10-04  kitone  <kitone@gna.org>

	* plugins/subtitleformats/sami/Makefile.am:
	* plugins/subtitleformats/sami/sami.cc:
	Fix bug #18697 : Cannot parse <font> tags in sami subtitles. Patch by Dongsu Park <advance38 at gmail dot com>

2011-09-03  kitone  <kitone@gna.org>

	* plugins/subtitleformats/subrip/subrip.cc:
	Fix bug #18381 : Fails to open srt file with co-ordinates in the first subtitle.

2011-09-03  kitone  <kitone@gna.org>

	* share/subtitleeditor.desktop.in:
	Fix bug #18449 : Encoding key is deprecated in share/subtitleeditor.desktop.in

2011-09-03  kitone  <kitone@gna.org>

	* share/subtitleeditor.desktop.in:
	Fix bug #18448 : Subtitleeditor should not handle MIME-Type "text/plain".

2011-07-02  kitone  <kitone@gna.org>

	* plugins/subtitleformats/sami/sami.cc:
	Fix: No need ptr for Subtitle.

2011-06-18  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2011-06-18  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.39.0 release.

2011-06-18  kitone  <kitone@gna.org>

	* configure.in:
	* plugins/subtitleformats/Makefile.am:
	* plugins/subtitleformats/sami/Makefile.am:
	* plugins/subtitleformats/sami/sami.cc:
	* plugins/subtitleformats/sami/sami.se-plugin.in:
	Introduce new subtitle format SAMI. Patch by Dongsu Park <advance38 at gmail dot com>
