@@ -365,6 +365,7 @@ plugins/subtitleformats/Makefile
 plugins/subtitleformats/adobeencoredvd/Makefile
 plugins/subtitleformats/advancedsubstationalpha/Makefile
 plugins/subtitleformats/bitc/Makefile
+plugins/subtitleformats/dcsubtitle/Makefile
 plugins/subtitleformats/microdvd/Makefile
 plugins/subtitleformats/mpl2/Makefile
 plugins/subtitleformats/mpsub/Makefile
